--- a/conf.yml
+++ b/conf.yml
@@ -554,3 +554,8 @@
   cfpdate: 08.03.2016
   cfpurl: http://nastachku.ru/speaker
   location: Ulyanovsk, Russia
+
+- title: Semibug
+  url: http://semibug.org/
+  startdate: 19.07.2016
+  location: Altair Engineering, 1820 E. Big Beaver Rd. Troy MI 48083
