Add OSDN.ua event

--- a/conf.yml
+++ b/conf.yml
@@ -559,3 +559,10 @@
   url: http://semibug.org/
   startdate: 19.07.2016
   location: Altair Engineering, 1820 E. Big Beaver Rd. Troy MI 48083
+
+- title: OPEN SOURCE AND LINUX CONFERENCE
+  url: http://osdn.org.ua/
+  startdate: 17.09.2016
+  cfpdate: 09.09.2016
+  cfpurl: http://osdn.org.ua/
+  location: Kyiv, Ukraine
